# vasthoodcleaning

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  example.env  pyproject.toml
.ci/docker/: app.local.yml  app.prod.yml  storage.local.yml
.ci/scripts/: collectstatic.sh
core/api/: urls.py
core/api/v1/: urls.py
core/apps/admin_panel/: admin.py
core/apps/landing/: exceptions.py
core/config/: asgi.py  containers.py  settings.py  urls.py
core/services/mapper/: map_obj.py
src/api/: urls.py
src/api/v1/: schema.py  urls.py
src/apps/: exceptions.py
src/apps/accounts/: backend.py  manager.py  models.py  validators.py
src/apps/admin_panel/: admin.py  apps.py
src/apps/clients/: validators.py
src/apps/jobs/: exceptions.py  permissions.py
src/apps/landing/: exceptions.py
src/config/: __init__.py  config_builder.py  containers.py  settings.py
src/config/settings/: __init__.py  common.py  database.py  house_pro.py  logger.py  redis.py  services.py  twilio_config.py
src/core/: di_container.py
src/core/constructor/: exceptions.py  permissons.py  validators.py
src/core/containers/: __init__.py  containers.py  di_container.py
src/core/jwt_token/: models.py
src/core/mapper/: __init__.py  dataclass_to_schema.py
src/core/notification/: conf.py  reciever.py
src/core/security/: __init__.py  auth_func.py  callable.py  jwt_auth.py
src/services/: cache.py
src/services/crm/: base.py  exceptions.py
src/services/jwt_token/: exceptions.py  models.py
src/services/mapper/: __init__.py  map_obj.py
src/services/notification/: base.py  config.py  exceptions.py
src/services/tasks_/: tasks.py  (+2 more)
src/templates/: index.html
src/templatetags/: custom_filters.py
(+93 files in other folders)
